// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders hasConnectionIssue 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <div data-v-56029fad="" class="notecard-content">
    <div data-v-56029fad=""> The document could not be loaded. Please check your internet connection. </div>
    <ncbutton-stub data-v-56029fad="" alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="primary" class="notecard-button"> Reconnect </ncbutton-stub>
  </div>
</ncnotecard-stub>"
`;

exports[`renders idle 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="info" heading="" text="">
  <div data-v-56029fad="" class="notecard-content">
    <div data-v-56029fad=""> You've been disconnected from the server. </div>
    <ncbutton-stub data-v-56029fad="" alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="primary" class="notecard-button"> Reconnect </ncbutton-stub>
  </div>
</ncnotecard-stub>"
`;

exports[`renders sync error 0 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <div data-v-56029fad="" class="notecard-content">
    <div data-v-56029fad=""> The file was overwritten. Your current changes cannot be auto-saved. Please choose how to proceed. </div>
    <!---->
  </div>
</ncnotecard-stub>"
`;

exports[`renders sync error 1 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 2 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <div data-v-56029fad="" class="notecard-content">
    <div data-v-56029fad=""> Error Message goes here </div>
    <ncbutton-stub data-v-56029fad="" alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="primary" class="notecard-button"> Reload </ncbutton-stub>
  </div>
</ncnotecard-stub>"
`;

exports[`renders sync error 3 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 4 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;

exports[`renders sync error 5 1`] = `
"<ncnotecard-stub data-v-56029fad="" type="warning" heading="" text="">
  <!---->
</ncnotecard-stub>"
`;
